# Match_Score

./: .buildpacks  .gitignore  Procfile  README.md  fill_data_to_db.sql  hello.py  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: format-and-lint.yml  lint.yml
backend/: .env.template  empty_data_from_db.sql  fill_data_to_db.sql  main.py  match_score_db.sql  pyproject.toml  requirements.txt
backend/src/api/: deps.py
backend/src/core/: authentication.py  config.py  security.py
backend/src/crud/: convert_db_to_response.py  match.py  player.py  prize_cut.py  request.py  team.py  tournament.py  user.py
backend/src/models/: match.py  player.py  prize_cut.py  request.py  team.py  user.py  (+1 more)
backend/tests/: test_matches.py  test_players.py  test_prize_cuts.py  test_requests.py  test_teams.py  test_tournament_service.py  test_users.py
frontend/: Procfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: fill_data_to_db.sql
src/api/: deps.py
src/core/: authentication.py  config.py  security.py
src/crud/: constants.py  convert_db_to_response.py  match.py  player.py  prize_cut.py  request.py  team.py  tournament.py  user.py  validators.py
src/database/: session.py
src/models/: __init__.py  enums.py  match.py  player.py  prize_cut.py  request.py  team.py  tournament.py  user.py
src/schemas/: match.py  player.py  prize_cut.py  request.py  schemas.py  team.py  tournament.py  user.py
src/utils/: local_time.py  notifications.py  pagination.py  validators.py
tests/: test_db.py
(+72 files in other folders)
