[project]
name = "match-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]
