[project]
name = "match-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.4",
    "black>=24.10.0",
]

[tools.ruff]
select = ["E", "F", "I", "C"]
line-length = 88
fix = true
exclude = ["migrations", ".venv", "__pycache__"]

[tools.ruff.isort]
known-first-party = ["match_score"]
default-section = "THIRDPARTY"
force-sort-within-sections = true
combine-as-imports = true

extend-ignore = ["E203", "W503"]

[tools.black]
line-length = 88
target-version = ["py312"]
